= 2.0 / ?? (future release changes, like a reminder to self)
  
  - prsnt? and absnt? are now finally banned into oblivion. Wasting vocals for
    the win. 
    
= 1.3.0 / ???

  Next bigger release, features not clear yet. Probably heredoc-parsing. 
    
= 1.2.1 / ???

  ! FIX: Slice#slice returned wrong bits at times (see issue 36).

= 1.2.0 / 4Feb2011
  
  + Parslet::Parser is now also a grammar atom, it can be composed freely with
    other atoms. (str('f') >> MiniLispParser.new >> str('b'))
    
  + No strings, only slices are returned as part of the parser result. 
    Parslet::Slice is almost a string class, but one that remembers the 
    source offset. This has also bought us a slight speedup.
    
  + require 'parslet/convenience' now brings #parse_with_debug to all parslets.
    This is a consequence of the above change. 
  
  + Deprecates prsnt? and absnt? in favor of the more readable absent? and
    prsnt?. Uses 3 bytes more RAM. The old variants will exist until we release
    2.0. 
  
  INTERNALLY
  
  + Visitors now should have methods that all begin with 'visit_*'. #str 
    becomes #visit_str.

  + Parslet::Atoms::Entity now takes only a block argument instead of context
    and block. 

= 1.1.1 / 4Feb2011

  ! FIX: Line counting was broken by performance optimisations. 
  
  + Squeezed out another few drops of performance. 

= 1.1.0 / 2Feb2011
  
  + Uses return (fail/success), cached line counts, memoizing of parse results 
    and other tricks internally for at least an order of magnitude increase 
    in execution speed.
    
  + str('foo').maybe will now return an empty string again. Use .as(...) to 
    name things and get back [] from #repeat and nil from #maybe.
    
  + If you require 'parslet/atoms/visitor', you'll get an accept method on
    all known Parslet::Atoms.
    
  + If you require 'parslet/export', you can call #to_citrus and #to_treetop
    to produce string versions of your grammar in those dialects.
  